[FEAT] 컨설팅 요구사항 (자취방 사진) 저장 API 구현
